# diario_oficial

./: .env-dist  .gitignore  .project  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
Scripts/: explode.sql
diario_oficial/: cli.py  dados.py  database.py  diario_oficial.py  diario_oficial_bruto.py  main.py  models.py  pipeline.py  raspar_doe.py  settings.py  transformacao.py  util.py
diario_oficial/database/: __init__.py
migrations/: env.py
migrations/versions/: 0fb49529f73b_adicionando_chave_estrangeira_poder.py  134e1f1bf7a3_iniciando_o_banco.py  14532f35de43_adicionando_sequancial_na_chave_primaria.py  1962557f0efd_adicionando_sequancial_na_chave_primaria.py  2dee912336a4_adicionando_tipo_publicacao_fk.py  36e27a825a91_adicionando_ato.py  3801ee800ad3_adicionando_o_relacionamento_fk.py  3dabb7927524_add_col_auditoria_em_publicacao.py  53eb17a416bb_adicionando_trigger_ato.py  5500522d8e72_ajustando_as_caracteristicas_das_colunas.py  5794cd8b905a_comentario_sobre_a_versão.py  59887b3ae575_adicionando_a_coluna_divisao_adm_.py  5ab03f2688c0_adicionando_dados_ao_dominio.py  65829fb284d8_testando.py  6bdd57e019e5_testando_chave_estrangeira.py  6fc8e4f473c6_adicionando_url_a_doe_bruto.py  70d87294760d_adicionando_o_relacionamento_fk.py  77aaf12ec108_corringido_o_null_constring_para_adm_.py  7aa9a8934b04_diorio_oficial_json_nullable_true.py  7bcf5aa06c38_adicionando_dados.py  7d3010a8ea8c_adicionando_tipo_publicacao.py  7ece6d16d3bc_unique_pub_identificador_link.py  7f0fcc2b350b_adicionando_dominios.py  7f5b8382be78_adicionando_coluna_processar_dow_bruto_.py  88c22fa5144d_adicionando_o_relacionamento_fk.py  95a39bdef9ce_comentario_sobre_a_versão.py  9745a934e2fc_iniciando_o_banco.py  9bb1642a4520_adicionando_o_relacionamento_fk.py  9e09149daa8d_adicionando_adm_indireta_ao_dominio.py  a5960fdd549a_new_revision.py  a70574a135a5_adicionando_valores_as_tabelas_de_.py  acbfd08711f3_adicionando_coluna_processar_publicacao_.py  (+12 more)
scripts/: app.py  diario_oficial.py
tests/: test_diario_oficial.py
(+42 files in other folders)
