[tool.poetry]
name = "diario-oficial"
version = "0.1.0"
description = "Módulo para raspagem de dados do Diário Oficial do Estado da Bahia"
authors = ["Diogo Caribé <dogosousa@gmail.com>"]
readme = "README.md"
packages = [{include = "diario_oficial"}]

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.31.0"
selenium = "^4.20.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "2.0.31"
pandas = "^2.2.2"
alembic = "^1.13.2"
sqlalchemy-utils = "^0.41.2"
typer = "^0.12.5"
psycopg = {version = "^3.2.4", extras = ["binary"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "single"
